# KungFuChess

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  input.txt  run_tests.sh  temp_check_size.cpp  vpl_CMakeLists.txt  vpl_submission.cpp
src/: main.cpp
src/Model/: Board.cpp  Board.h  BoardParser.cpp  CommandInterpreter.cpp  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  MoveGenerator.cpp  MovementRule.cpp  Piece.cpp  Piece.h  PieceColor.h  PieceFactory.cpp  PieceRules.cpp  PieceRules.h  PieceTypeDefinition.h  PieceTypeRegistry.cpp  PieceTypeRegistry.h  PixelMapper.h  Position.h  RealTimeArbiter.cpp  RuleEngine.cpp  RuleEngine.h
src/graphics/: InputHandler.cpp  InputHandler.h  PieceRenderer.cpp  PieceRenderer.h  Renderer.cpp  Renderer.h  SpriteAnimConfig.h  Window.cpp  Window.h  img.cpp  img.hpp
src/logic/Controller/: Controller.cpp  Controller.h  PixelMapper.h
src/logic/Engine/: GameEngine.cpp  GameEngine.h  GameSnapshot.h  MoveExecutor.cpp  MoveExecutor.h  PromotionHandler.h  SnapshotBuilder.cpp  SnapshotBuilder.h
src/logic/Io/: BoardParser.cpp  BoardParser.h
src/logic/Model/: Board.cpp  Board.h  BoardParser.h  CommandInterpreter.h  GameConfig.h  GameEngine.cpp  GameEngine.cpp.bak  GameEngine.h  GameSnapshot.h  GameState.h  MoveExecutor.cpp  MoveExecutor.h  MoveGenerator.cpp  (+20 more)
tests/: test_bishop_illegal.txt  test_bishop_legal.txt  test_click.txt  test_empty_click.txt  test_friendly_switch.txt  test_king_illegal.txt  test_knight_jump.txt  test_outside_bounds.txt  test_pawn_double_blocked.txt  test_pawn_promotion.txt  test_pawn_single_step.txt  test_queen_legal.txt  test_rook_illegal.txt  test_rook_legal.txt  test_row_width_mismatch.txt  test_unknown_token.txt
tests/expected/: test_bishop_illegal.expected.txt  test_bishop_legal.expected.txt  test_click.expected.txt  test_empty_click.expected.txt  test_friendly_switch.expected.txt  test_king_illegal.expected.txt  test_knight_jump.expected.txt  test_pawn_double_blocked.expected.txt  test_pawn_promotion.expected.txt  test_pawn_single_step.expected.txt  test_queen_legal.expected.txt  test_rook_illegal.expected.txt  test_rook_legal.expected.txt
(+7 files in other folders)
